# orrandomForest

./: .gitignore  README.md  model  orrandomForest.opam  test.r
data/: AMP_class.csv
src/: dune  gnuplot.ml  model.ml  rf.ml  rf.mli  test.ml  utls.ml
