opam-version: "1.2"
maintainer: "ligand@free.fr"
authors: ["Francois BERENGER"]
homepage: "https://github.com/UnixJunkie/orrandomForest"
bug-reports: "https://github.com/UnixJunkie/orrandomForest/issues"
dev-repo: "git+https://github.com/UnixJunkie/orrandomForest.git"
license: "LGPL + linking exception"
build: [
  ["R" "CMD" "BATCH" "files/install_matrix.r"]
  ["R" "CMD" "BATCH" "files/install_randomForest.r"]
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "conf-r"
]
