(library
 (name orrandomForest)
 (public_name orrandomForest)
 (modules result utls rf)
 (libraries dolog))

(executables
 (names model)
 (public_names orrf_model)
 (modules model)
 (libraries batteries minicli line_oriented orrandomForest cpm))

;; never installed executables
(executables
 (names test)
 (modules test)
 (libraries dolog batteries cpm orrandomForest))
