(library
 (name orrandomForest)
 (public_name orrandomForest)
 (modules result utls rf)
 (libraries dolog))

(executables
 (names model)
 (public_names orrf_model)
 (modules model gnuplot)
 (libraries batteries minicli orrandomForest cpm parany line_oriented))

;; never installed executables
(executables
 (names test)
 (modules test)
 (libraries dolog batteries cpm orrandomForest))
